--- a/package.json
+++ b/package.json
@@ -37,5 +37,11 @@
   },
   "eslintConfig": {
     "extends": "google"
+  },
+  "env": {
+    "browser" : true
+  },
+  "rules" : {
+    "linebreak-style": 0
   }
 }
